fixed: overflow options to remove scroll bouncing

--- a/src/index.css
+++ b/src/index.css
@@ -10,13 +10,22 @@
   overscroll-behavior: none;
 }
 
+html {
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
   min-height: 100dvh;
-  padding: 0;
+  height: 100%;
   margin: 0;
   font-size: 32px;
   padding: 0 1em 0 1em;
+
+  overflow: auto;
+  overscroll-behavior: none;
 }
+
 
 @media (max-width: 648px) {
   body {
